--- a/userspace/libs/librpc-rs/Cargo.toml
+++ b/userspace/libs/librpc-rs/Cargo.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 [dependencies]
 num-derive = "0.4"
 num-traits = "0.2"
+protobuf = {version = "3.3.0", optional = true}
 
 [features]
 debug = []
+default = []
