userspace: peekblock utility

--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(mossh)
 add_subdirectory(2048)
 
 add_subdirectory(pbtest)
+add_subdirectory(peekblock)
 
 add_subdirectory(ramdisk)
 add_subdirectory(syslogd)
