init: merge device-manager into services

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -15,11 +15,6 @@
 ## is an array, but the 'device_manager.path' key is not.
 ########################################################################################
 
-## Device Manager configuration
-## path, and args to the device manager executable
-device_manager.path = /initrd/drivers/device-manager
-# device_manager.args =
-
 ## Filesystems configuration
 ## The directories are created in the order they are specified in the file.
 mkdir = /sys
@@ -63,5 +58,6 @@ mount = none /test-initrd userfs.cpiofs defaults
 ## Args: the arguments to the service executable
 ##
 
+service = /initrd/drivers/device-manager
 service = /initrd/drivers/blockdev-manager
 service = /initrd/programs/ramdisk
