--- a/userspace/drivers/CMakeLists.txt
+++ b/userspace/drivers/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 add_subdirectory(acpi-daemon)
 
+add_subdirectory(blockdev-layers)
 add_subdirectory(blockdev-manager)
 
 add_subdirectory(device-manager)
