.vscode/tasks.json: force QEMU to boot from cdrom

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,7 @@
                 "-drive", "file=${workspaceFolder}/build/disk.img,format=raw,if=virtio", // using virtio
                 "-device", "virtio-gpu-pci",
                 "-vga", "none",
+                "-boot", "d", // boot from cdrom
             ],
             "problemMatcher": [ ],
             "group": "none",
