tests: port to hosted mlibc

--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -15,4 +15,4 @@ add_subdirectory(librpc-rs-test)
 add_subdirectory(syslog-test)
 
 add_executable(test-launcher test-main.c)
-setup_userspace_program(test-launcher /tests "Userspace test launcher")
+add_to_initrd(TARGET test-launcher /tests)
