--- a/userspace/tests/echo-ipc/CMakeLists.txt
+++ b/userspace/tests/echo-ipc/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_executable(ipc-echo-server main.c)
-target_link_libraries(ipc-echo-server PRIVATE mos::include mos::libipc)
+target_link_libraries(ipc-echo-server PRIVATE mos::include mos::libipc_hosted)
 add_to_initrd(TARGET ipc-echo-server /tests)
