--- a/userspace/tests/fork/CMakeLists.txt
+++ b/userspace/tests/fork/CMakeLists.txt
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_executable(fork-test main.c)
-setup_userspace_program(fork-test /tests "Kernel fork() test")
+add_to_initrd(TARGET fork-test /tests)
