--- a/userspace/tests/ipc/CMakeLists.txt
+++ b/userspace/tests/ipc/CMakeLists.txt
@@ -3,5 +3,5 @@
 add_executable(ipc-ping ping.c)
 add_executable(ipc-pong pong.c)
 
-setup_userspace_program(ipc-ping /tests "Kernel IPC test - Ping Server")
-setup_userspace_program(ipc-pong /tests "Kernel IPC test - Pong Client")
+add_to_initrd(TARGET ipc-ping /tests)
+add_to_initrd(TARGET ipc-pong /tests)
