--- a/userspace/tests/signal/CMakeLists.txt
+++ b/userspace/tests/signal/CMakeLists.txt
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_executable(signal main.c)
-setup_userspace_program(signal /programs "signal tests")
+add_to_initrd(TARGET signal /tests)
