chore: update CI

--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -46,9 +46,12 @@ jobs:
 
       - name: Install Toolchains
         run: |
-          git clone https://github.com/moodyhunter/mos-packages
-          ./mos-packages/fetch-package.sh ${{ matrix.config.arch }}-mos-gcc
-          ./mos-packages/fetch-package.sh ${{ matrix.config.arch }}-mos-mlibc
+          echo "" >> /etc/pacman.conf
+          echo '[mos]' >> /etc/pacman.conf
+          echo 'SigLevel = Optional TrustAll' >> /etc/pacman.conf
+          echo 'Server = https://mospkg.mooody.me/$arch' >> /etc/pacman.conf
+
+          pacman -Sy --noconfirm x86_64-mos-gcc x86_64-mos-binutils x86_64-mos-mlibc mos-api-headers-x86_64-git
 
       - name: Configure
         run: |
