--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -68,8 +68,8 @@ jobs:
       - name: Generate CodeBrowser
         run: |
           cd build
-          ./codebrowser/build/generator/codebrowser_generator -d /MOS/source-code/data -b ./compile_commands.json -a -o ./docs -p MOS:..
-          ./codebrowser/build/indexgenerator/codebrowser_indexgenerator ./docs -d /MOS/source-code/data
+          ./codebrowser/build/generator/codebrowser_generator -d /source-code/data -b ./compile_commands.json -a -o ./docs -p MOS:..
+          ./codebrowser/build/indexgenerator/codebrowser_indexgenerator ./docs -d /source-code/data
           cp -rv ./codebrowser/data ./docs/data
           mv ./docs ./doxygen_output/html/source-code
 
