docs: code-docs should jump into topics.html directly

--- a/docs/retype.yml
+++ b/docs/retype.yml
@@ -35,7 +35,7 @@ links:
     icon: code
 
   - text: Source Docs
-    link: https://mos.mooody.me/code-docs/
+    link: https://mos.mooody.me/code-docs/topics.html
     icon: book
 
   - text: Packages
