--- a/userspace/drivers/CMakeLists.txt
+++ b/userspace/drivers/CMakeLists.txt
@@ -14,5 +14,5 @@ add_simple_rust_project(
     "${CMAKE_CURRENT_LIST_DIR}/virtiod"
     virtiod
     "/drivers/"
-    DEPENDS dma_hosted
+    DEPENDS dma
 )
