--- a/userspace/drivers/libdma/CMakeLists.txt
+++ b/userspace/drivers/libdma/CMakeLists.txt
@@ -4,7 +4,6 @@ add_mos_library(
     NAME dma
     SOURCES libdma.c
     USERSPACE_ONLY
-    HOSTED_ONLY
 )
 
-add_to_initrd(TARGET dma_hosted /lib/)
+add_to_initrd(TARGET dma /lib/)
