--- a/userspace/libs/CMakeLists.txt
+++ b/userspace/libs/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-target_sources(stdlib PRIVATE
+target_sources(stdlib_minimal PRIVATE
     libuserspace.c
     libuserspace++.cpp
     liballoc.c
@@ -12,13 +12,13 @@ target_sources(stdlib PRIVATE
     signal.c
 )
 
-target_include_directories(stdlib SYSTEM PUBLIC ${CMAKE_SOURCE_DIR}/userspace/include)
+target_include_directories(stdlib_minimal SYSTEM PUBLIC ${CMAKE_SOURCE_DIR}/userspace/include)
 
 add_subdirectory(argparse)
 add_subdirectory(libconfig)
 add_subdirectory(readline)
 
-add_to_initrd(TARGET libipc_hosted /lib)
-add_to_initrd(TARGET librpc-client_hosted /lib)
-add_to_initrd(TARGET librpc-server_hosted /lib)
-add_to_initrd(TARGET nanopb_hosted /lib)
+add_to_initrd(TARGET libipc /lib)
+add_to_initrd(TARGET librpc-client /lib)
+add_to_initrd(TARGET librpc-server /lib)
+add_to_initrd(TARGET nanopb /lib)
