--- a/userspace/programs/init/bootstrapper/CMakeLists.txt
+++ b/userspace/programs/init/bootstrapper/CMakeLists.txt
@@ -15,9 +15,9 @@ add_executable(bootstrapper
 
 target_link_libraries(bootstrapper PRIVATE
     mos::include
-    mos::nanopb_hosted_static
-    mos::librpc-server_hosted_static
-    mos::librpc-client_hosted_static
+    mos::nanopb_static
+    mos::librpc-server_static
+    mos::librpc-client_static
 )
 target_compile_options(bootstrapper PRIVATE -static)
 target_link_options(bootstrapper PRIVATE -static)
