--- a/userspace/programs/init/CMakeLists.txt
+++ b/userspace/programs/init/CMakeLists.txt
@@ -5,8 +5,8 @@ add_subdirectory(bootstrapper)
 add_executable(init main.c)
 target_link_libraries(init
     PRIVATE
-        mos::argparse_hosted
-        mos::libconfig_hosted
+        mos::argparse
+        mos::libconfig
         mos::include
 )
 add_to_initrd(TARGET init /programs)
