stdlib: cleanup stdlib, move data structures back into kernel space

--- a/userspace/programs/lazybox/CMakeLists.txt
+++ b/userspace/programs/lazybox/CMakeLists.txt
@@ -2,7 +2,7 @@
 # think of it like the BusyBox
 
 macro(lazybox_program name description)
-    add_executable(${name} ${name}.c)
+    add_executable(${name} ${name}.c mosapi.c)
     set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
     target_link_libraries(${name} PRIVATE mos::stdlib_minimal)
     add_to_initrd(TARGET ${name} /programs)
