ci: install rust in CI

--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -50,7 +50,10 @@ jobs:
           echo 'SigLevel = Optional TrustAll' >> /etc/pacman.conf
           echo 'Server = https://mospkg.mooody.me/$arch' >> /etc/pacman.conf
 
-          pacman -Sy --noconfirm mos-sdk ${{matrix.config.arch}}-mos-gcc ${{matrix.config.arch}}-mos-binutils ${{matrix.config.arch}}-mos-mlibc
+          pacman -Sy --noconfirm rustup mos-sdk ${{matrix.config.arch}}-mos-gcc ${{matrix.config.arch}}-mos-binutils ${{matrix.config.arch}}-mos-mlibc mos-llvm mos-rust
+
+          rustup toolchain link mosdev /opt/mos-rust/
+          rustup default mosdev
 
       - name: Configure
         run: |
