init.conf: add syslogd service

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -61,3 +61,4 @@ mount = none /test-initrd userfs.cpiofs defaults
 service = /initrd/drivers/device-manager
 service = /initrd/drivers/blockdev-manager
 service = /initrd/programs/ramdisk
+service = /initrd/programs/syslogd
