--- a/configs/x86_64-debug.conf
+++ b/configs/x86_64-debug.conf
@@ -1,43 +1,5 @@
-MOS_DEBUG_x86_cpu=y
-MOS_DEBUG_x86_lapic=y
-MOS_DEBUG_x86_ioapic=y
-MOS_DEBUG_x86_startup=y
-MOS_DEBUG_x86_acpi=y
 MOS_PRINTK_WITH_FILENAME=y
-MOS_DEBUG_thread=y
-MOS_DEBUG_fork=y
-MOS_DEBUG_scheduler=y
-MOS_DEBUG_syscall=y
-MOS_DEBUG_pmm_buddy=y
-MOS_DEBUG_vmm=y
-MOS_DEBUG_mmap=y
-MOS_DEBUG_shm=y
-MOS_DEBUG_cow=y
-MOS_DEBUG_elf=y
-MOS_DEBUG_io=y
-MOS_DEBUG_cpio=y
-MOS_DEBUG_setup=y
-MOS_DEBUG_spinlock=y
-MOS_DEBUG_futex=y
-MOS_DEBUG_ipc=y
-MOS_DEBUG_vfs=y
-MOS_DEBUG_userfs=y
-MOS_DEBUG_dcache=y
-MOS_DEBUG_dcache_ref=y
-MOS_DEBUG_tmpfs=y
-MOS_DEBUG_ipi=y
-MOS_DEBUG_slab=y
-MOS_DEBUG_sysfs=y
-MOS_DEBUG_panic=y
-MOS_DEBUG_signal=y
-MOS_DEBUG_dma=y
-MOS_DEBUG_pipe=y
+MOS_PLATFORM_DEBUG_ALL=y
+MOS_DEBUG_ALL=y
 MOS_TESTS=y
-MOS_TEST_printf=y
-MOS_TEST_linked_list=y
-MOS_TEST_kmalloc=y
-MOS_TEST_cmdline_parser=y
-MOS_TEST_hashmap=y
-MOS_TEST_downwards_stack=y
-MOS_TEST_memops=y
-MOS_TEST_ring_buffer=y
+MOS_TEST_ALL=y
