--- a/arch/x86_64/Kconfig
+++ b/arch/x86_64/Kconfig
@@ -12,6 +12,16 @@ config HWMEM_VADDR
 
 menu "x86-64 debugging options"
 
+config PLATFORM_DEBUG_ALL_x86_64
+    bool
+    help
+        Enable all x86-64 debugging options, this is rarely needed.
+    select DEBUG_x86_cpu
+    select DEBUG_x86_lapic
+    select DEBUG_x86_ioapic
+    select DEBUG_x86_startup
+    select DEBUG_x86_acpi
+
 config DEBUG_x86_cpu
     bool "x86 CPU debug"
 
