librpc: more C++ support & fix large pb structure support

--- a/libs/librpc/CMakeLists.txt
+++ b/libs/librpc/CMakeLists.txt
@@ -25,6 +25,7 @@ add_mos_library(
         rpc_server.c
     LINK_LIBRARIES
         mos::libipc
+        mos::nanopb
     DEFINES
         __MOS_RPC_SERVER__
 )
