userfs/blockdevfs: refactor blockdevfs

--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -19,6 +19,7 @@
 ## The directories are created in the order they are specified in the file.
 mkdir = /sys
 mkdir = /test-initrd
+mkdir = /dev
 
 ## Symbolic links
 symlink = /bin /initrd/bin
